# multi-language-bazel-monorepo

./: .bazelignore  .bazelrc  .gitignore  .npmrc  .releaserc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  move_tests.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rename_tests.sh
cloud_runs/python/econ_export/: .coveragerc  .dockerignore  .gcloudignore  .run.yaml  Dockerfile  Dockerfile.debug  context.py  pyproject.toml
cloud_runs/python/econ_export/api/: econ_export_api.py  request_models.py
cloud_runs/python/econ_export/tests/: handle_cashflow_test.py  handle_one_liner_test.py  mock_context.py  query_builder_test.py  utils_test.py
cloud_runs/python/external_api_import/: .dockerignore  .gcloudignore  .run.yaml  Dockerfile  app.py  context.py  main.py  pyproject.toml
cloud_runs/python/merge_pdf/: .dockerignore  .gcloudignore  .run.yaml  Dockerfile  app.py  context.py  google_services.py  main.py  pyproject.toml
projects/client/: .babelrc.json  .eslintignore  .unimportedrc.json  BUILD.bazel  babel.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  webpack-checksum-plugin.js  webpack-loaders.js  webpack.config.js
projects/client/.storybook/: main.ts  manager.ts  preview.js
projects/client/playground/: .gitignore  index.tsx
projects/client/public/: index.html  manifest.json
projects/client/public/gantt_themes/: gantt.classic-light.css
projects/client/src/: ClientRefresher.tsx  error-handler.ts  feature-flag.test.ts  global.d.ts  google-analytics.ts  index.tsx  modules.d.ts  routes.tsx  serviceWorker.ts  some.feature  some.steps.test.ts  styled-theme.ts  urls.ts
projects/client/src/access-policies/: AbilityProvider.tsx  AddPolicyDialog.tsx  Can.tsx  EditPolicyDialog.tsx  PermissionDescriptions.tsx  RolesTable.tsx  UserAvatar.tsx  mutations.ts  queries.ts  shared.tsx  usePermissions.ts
projects/client/src/analytics/: GoogleAnalytics.tsx  Segment.tsx  SegmentProvider.tsx  analytics.ts  tagging.ts  useAnalytics.tsx  useTrackAnalytics.ts
projects/client/src/api-sync/: APISync.tsx  useApiProvision.ts
projects/client/src/company/: Company.tsx  CompanyAccess.tsx  CustomColumnsRename.tsx  ForecastConfiguration.tsx  ManageWells.tsx  useCompanyAccess.ts
projects/client/src/components/: AgGrid.module.scss  AgGrid.ssrm.tsx  AgGrid.tsx  AutocompleteWithCheckboxes.tsx  Button.tsx  Centered.ts  Checkbox.tsx  ChooseDialog.tsx  ChoosePSeriesDialog.tsx  CommandLauncher.tsx  ContextMenu.tsx  ControlledAgGrid.tsx  DataTable.tsx  DebouncedValue.tsx  DisplayHeader.tsx  Divider.tsx  Doggo.tsx  DropBoxFileInput.jsx  ErrorBoundary.tsx  FileUpload.tsx  Floater.tsx  FontAwesomeIcon.tsx  FontIcon.jsx  FormHelper.tsx  FormikPrefix.tsx  HelpDialog.jsx  Hotkey.ts  InptDataSheet.tsx  KeyboardShortcutsButton.tsx  ListSubMenu.tsx  MenuButton.jsx  NumberField.jsx  Overlay.tsx  PageField.tsx  Pagination.tsx  Paper.tsx  Placeholder.tsx  PlotZingchart.tsx  Prefix.tsx  RawZingchart.tsx  (+38 more)
projects/client/src/cost-model/: AssumptionMod.tsx  routes.ts
projects/client/src/create-wells/: CreateWellsDialog.tsx  CreateWellsForm.tsx  CreateWellsPreview.tsx  ManageTemplatesDialog.tsx  WellHeaderInput.tsx  api.ts  create-wells.module.scss  models.ts  shared.ts
projects/client/src/data/: basin.json  counties.json  di-counties.json  states.json
projects/client/src/data-import/: FileImport.jsx  FileImportInfo.jsx  types.d.ts
projects/client/src/data-sync/: DataSyncModuleList.tsx
projects/client/src/debug/: index.tsx
projects/client/src/economics/: EconSettingsDialog.tsx  Economics.tsx
projects/client/src/feature-flags/: FeatureFlagGuard.tsx  FeatureFlagGuardOutlet.tsx  LaunchDarklyContext.tsx  hocs.tsx  initialize-launch-darkly-client.tsx  useLDFeatureFlags.tsx
projects/client/src/forecasts/: Forecast.tsx  ForecastManageWells.tsx  ForecastMerge.tsx  ForecastMod.tsx  ForecastSettings.tsx  NewForecastDialog.tsx  api.ts  chart.scss  forecastCtx.tsx  forecasts.scss  routes.ts  types.d.ts
projects/client/src/global-styles/: dark.scss  datasheet.scss  index-md.scss  index-mui.scss  index.scss  light.scss  md.scss  shepherd.scss  sweet-alert-overrides.scss  themes-colors.scss  vars.scss
projects/client/src/helpers/: Counter.ts  MuiV5ThemeProvider.tsx  Navigation.tsx  ag-grid-license.ts  ag-grid.ts  alerts.tsx  alfa.test.tsx  alfa.tsx  arrays.ts  browser.ts  color.test.ts  color.ts  constants.ts  date.test.tsx  date.tsx  dates.test.ts  dates.ts  debounce.ts  dialog.tsx  document.ts  enhanced-component.tsx  env.test.ts  env.ts  errors.test.ts  errors.ts  extend-component.tsx  features.ts  file-types.json  fileHelper.ts  files-upload.ts  filters.jsx  global-components.tsx  guard.test.tsx  guard.tsx  guards.tsx  hash.ts  headers.tsx  history.ts  hooks.tsx  inputFields.tsx  (+48 more)
projects/client/src/knowledge-base/: KBArticle.tsx  KBArticleDialog.tsx  KnowledgeBase.tsx  api.ts  (+3 more)
projects/client/tests/: SnapshotFriendlyStylesProviderWrapper.tsx  test-utils.tsx
projects/flex_cc/: .dockerignore  .flake8  .gitignore  .style.yapf  BUILD.bazel  Dockerfile  Dockerfile.debug  cloudbuild-base-image.yaml  conftest.py  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  pytest.ini
projects/flex_cc/.devcontainer/: Dockerfile  devcontainer.json
projects/flex_cc/api/: app.py  context.py  context_provider.py  decorators.py  google_cloud.py  server.py
projects/flex_cc/dev/: dev_context_local.py  extract_access.py  extract_phd.py  helpers.py  local_import.py
projects/flex_cc/tests/: capex_test.py  test_custom_calculation.py  test_emission.py  test_facility.py  test_network.py  test_oil_tank.py  test_server.py  test_well_group.py
projects/python_apis/: .dockerignore  .gcloudignore  BUILD.bazel  Dockerfile  Dockerfile.debug  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  pytest.ini
projects/python_apis/.devcontainer/: Dockerfile  devcontainer.json
projects/python_apis/api/: app.py  context.py  database.py  decorators.py  server.py
projects/python_apis/tests/: forecast_api_test.py  test_proximity_forecast.py
(+3012 files in other folders)
