module(
  name = "multi_language_monorepo",
  repo_name = "multi_language_monorepo",
)

bazel_dep(name = "rules_python", version = "0.25.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")