[tool.poetry]
name = "external_api_import"
version = "0.1.0"
description = ""
authors = ["ComboCurve, Inc"]

[tool.poetry.dependencies]
python = "^3.9"
Babel = "2.8.0"
dnspython = "1.16.0"
Flask = "2.1"
gevent = "21.12.0"
google-cloud-logging = "2.6"
gunicorn = {version = "20.0.4", extras = ["gevent"]}
mongoengine = "0.20.0"
pymongo = "3.11"
python-dateutil = "2.8.1"
requests = "2.22"
xlrd = "1.2.0"
numpy = "^1.22.4"
pyproj = "^3.4.0"
pandas = "^1.5.0"
grpc-interceptor = "^0.15.1"
google-cloud-secret-manager = "^2.16.2"
launchdarkly-server-sdk = "^8.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
